--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "^6.0.0-beta.5",
     "turbolinks": "^5.2.0",
     "webpack": "^5.21.2"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
