--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^6.0.0-beta.5",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.21.2"
+    "webpack": "^5.11.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-cli": "^4.5.0",
+    "@webpack-cli/serve": "^1.3.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "babel": {
+    "presets": ["./node_modules/@rails/webpacker/package/babel/preset.js"]
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
