--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^6.0.0-beta.5",
     "turbolinks": "^5.2.0",
+    "uuid": "^8.3.2",
     "webpack": "^5.11.0"
   },
   "version": "0.1.0",
