--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^6.0.0-beta.5",
+    "query-string": "^7.0.0",
+    "sortablejs": "^1.13.0",
     "turbolinks": "^5.2.0",
     "uuid": "^8.3.2",
     "webpack": "^5.11.0"
