--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
-  bucket: cover-tracker-155
+  access_key_id: <%= ENV.fetch("AWS_ACCESS_KEY_ID",  Rails.application.credentials.dig(:aws, :access_key_id)) %>
+  secret_access_key: <%= ENV.fetch("AWS_SECRET_ACCESS_KEY", Rails.application.credentials.dig(:aws, :secret_access_key)) %>
+  region: <%= ENV.fetch("AWS_S3_REGION", "us-east-1") %>
+  bucket: <%= ENV.fetch("AWS_S3_BUCKET_NAME", "cover-tracker-155") %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
