--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,29 @@
-app = "cover-tracker"
+# fly.toml file generated for cover-tracker on 2023-01-23T20:11:30-08:00
 
+app = "cover-tracker"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
 [build]
   [build.args]
-    BUNDLER_VERSION = "2.2.25"
-    BUNDLE_WITHOUT = "test:development"
-    NODE_VERSION = "16.5.0"
-    RUBY_VERSION = "3.0.3"
+    BUILD_COMMAND = "bin/rails fly:build"
+    SERVER_COMMAND = "bin/rails fly:server"
+
 [deploy]
-  release_command = "bundle exec rails db:migrate"
+  release_command = "bin/rails fly:release"
+
 [env]
   LANG = "en_US.UTF-8"
   PORT = "8080"
   RAILS_MAX_THREADS = "16"
   RAILS_SERVE_STATIC_FILES = "enabled"
   SERVER_COMMAND = "bundle exec puma -C config/puma.rb"
+
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
+
 [[services]]
   http_checks = []
   internal_port = 8080
@@ -31,18 +34,22 @@ processes = []
     hard_limit = 25
     soft_limit = 20
     type = "connections"
+
   [[services.ports]]
     force_https = true
     handlers = ["http"]
     port = 80
+
   [[services.ports]]
     handlers = ["tls", "http"]
     port = 443
+
   [[services.tcp_checks]]
     grace_period = "1s"
     interval = "15s"
     restart_limit = 0
     timeout = "2s"
+
 [[statics]]
   guest_path = "/app/public"
   url_prefix = "/"
