Prepare to switch to SQLite in production
Turns out RDS is expensive after your free year of credits.

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,11 @@ test:
   <<: *default
   database: db/test.sqlite3
 
+# FIXME: In a subsequent commit we will move to using SQLite in production.
+#
+#production:
+#  <<: *default
+#  database: /litefs/dbs/production.db
 production:
   <<: *default
   adapter: postgresql
